rancher-fleet/helidon-ds.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: hello-helidon-ingress-rule-0-vs
  namespace: hello-helidon
spec:
  host: hello-hello-deployment
  subsets:
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
