rancher-fleet/reviews-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  gateways:
  - reviews-gateway
  hosts:
  - reviews.152.70.200.106.nip.io
  http:
  - match:
    - uri:
        prefix: /review
  - route:
    - destination:
        host: reviews-v1
        subset: v1
      weight: 50
    - destination:
        host: reviews-v2
        subset: v3
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
